# dockerfile-nix-python-poetry

./: Dockerfile  README.md  main.nix
example_usage/: Dockerfile-api  docker-compose.yml  pyproject.toml
