[tool.poetry]
name = "mdm-proposal"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
spacy = "^2.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
click = "^7.1.2"
mypy = "^0.790"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
